terraform/route.tf
resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.main.id
}

resource "aws_route" "internet" {
    route_table_id = aws_route_table.public_rt.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  
}

resource "aws_route_table_association" "pub1" {
    subnet_id = aws_subnet.public1.id
    route_table_id = aws_route_table.public_rt.id
  
}

resource "aws_route_table_association" "pub2" {
    subnet_id = aws_subnet.public2
    route_table_id = aws_route_table.public_rt.id
  
}
