terraform/sg.tf
resource "aws_security_group" "alb_sg" {
  name   = "alb-sg"
  vpc_id = aws_vpc.main.id

  # ALB → EC2 (IMPORTANT)
  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
  resource "aws_security_group" "rds_sg" {
     name = "rds-sg" 
     vpc_id = aws_vpc.main.id
      ingress { 
        from_port = 3306 
        to_port = 3306 
        protocol = "tcp" 
        security_groups = [aws_security_group.alb_sg.id] 
        } 
        egress {
           from_port = 0 
           to_port = 0 
           protocol = "-1" 
           cidr_blocks = ["0.0.0.0/0"] 
           
  }
}

resource "aws_security_group" "ec2_sg" {
  name   = "ec2-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [aws_security_group.alb_sg.id]  # 🔥 ONLY ALB CAN ACCESS
  }

  # optional SSH (for debugging)
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # restrict later
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
